--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 pydantic = "^2.7.1"
+sqlalchemy = "^2.0.29"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.2"
