--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,19 @@ psycopg2-binary = "^2.9.9"
 injector = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.1.2"
 ipykernel = "^6.29.4"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.1.2"
 pytest-cov = "^5.0.0"
 pytest-html = "^4.1.1"
+
+[tool.poetry.group.lint.dependencies]
+ruff = "^0.4.3"
+
+
+[tool.poetry.group.migration.dependencies]
+alembic = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core"]
